// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddressButton Should render properly with full props 1`] = `
<div>
   
  <button
    class="sc-hKgJUU sc-eCstlR sc-iBPTik yNXFo fJzGbV KMmoQ"
  >
    <span
      class="sc-gKseQn fTGEco"
    >
      <span
        class="sc-jrAFXE fkvRJA"
      >
        <img
          class="sc-jSgvzq sc-pGacB iUxzmp ghyxMf"
          data-testid="avatar"
          size="24"
          src="test"
        />
      </span>
    </span>
    <span
      class="sc-fubCzh ePKPqF"
    >
      test.eth
    </span>
    <div
      class="sc-bdfBQB bfxPFN"
      size="25"
    >
      5
    </div>
  </button>
   
</div>
`;

exports[`AddressButton Should render properly with partial props 1`] = `
<div>
   
  <button
    class="sc-hKgJUU sc-eCstlR sc-iBPTik yNXFo fJzGbV KMmoQ"
  >
    <span
      class="sc-gKseQn fTGEco"
    >
      <span
        class="sc-jrAFXE fkvRJA"
      >
        <img
          class="sc-jSgvzq sc-pGacB iUxzmp ghyxMf"
          data-testid="avatar"
          size="24"
          src="test"
        />
      </span>
    </span>
    <span
      class="sc-fubCzh ePKPqF"
    >
      test.eth
    </span>
  </button>
   
</div>
`;
